phpQLAdmin 2.3 Change Log

phpQLAdmin 2.3.3/GUI_TEMPLATE TO BE ANNOUNCED
	Bug fixes
	GUI layout changes
	Schema changes
	API changes
	  - Files moved about
	    + include/pql*		=> libs/
	    + include/dlw_porting.inc	=> libs/
	    + include/config*		=> config/
	    + include/defaults.inc	=> config/
	    + include/lang.en.inc	=> translations/
	    + include/thryn.ttf		=> tools/
	    > All references in all files was updated!
	  - Remove the validateEmailFormat directory. Never used, I had my own
	    function(s) for this.
	  - Add the Smarty Template Engine (http://smarty.php.net) version 2.6.13 for use
	    with the soon-to-bee template driven phpQLAdmin.
	  - Add the PHPLib Template to Smarty Template (http://www.sanisoft.com/phplib2smarty/)
	    version 0.1 for use with the soon-to-bee template driven phpQLAdmin.
	  - Add the PHP Base Library (http://phplib.sourceforge.net/) version 7.4a for use
	    with the soon-to-bee template driven phpQLAdmin.

	Misc changes

phpQLAdmin 2.3.2 Release (Mar 11 2006)
	Bug fixes
	GUI layout changes
	  - Allow for picture to be added to user.
	    Closes: #72
	  - Add a 'Allow all chars in passwds' to the branch configuration page
	    (and check this new value whenever we verify the password).
	    Closes: #262
	  - Fix group management code. Patch by Aaron Collins.

	Schema changes
	  - Add attribute to specify if autogenerate uidNumber and gidNumber.
	    1.3.6.1.4.1.8767.3.2.1.26 => 'autoCreateUGidNumber'

	API changes
	  - Option to specify in the user template(s) whether to autogenerate uid- and
	    gid numbers or if to use the 'virtual user' within QmailLDAP.

	Misc changes
	  - Include a working Apache/mod_ldap_cfg config snippet and database branch example.
	  - Update the Apache readme (doc/README.apache) with the new Apache/mod_ldap_cfg
	    demo files.
	  - To stop PHP warnings when running with 'error_reporting=E_NOTICE':
	    + Make sure variables are initialized before use.