@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Pragma" content="no-cache">
     <title><?php echo pql_get_define("PQL_CONF_WHOAREWE"); ?></title>
-    <link rel="stylesheet" href="tools/normal.css" type="text/css">
+    <link rel="stylesheet" href="templates/normal.css" type="text/css">
 
 <?php
   $br = strtolower(getenv("HTTP_USER_AGENT"));
